--- a/Task #1.ipynb
+++ b/Task #1.ipynb
@@ -7,7 +7,7 @@
     "\n",
     "###  Task 01  -  Prediction using Supervised Learning                                         \n",
     "\n",
-    "                                                                     ]'-- Yamini Nagwanshi"
+    "                                                                     -- Yamini Nagwanshi"
    ]
   },
   {
